--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
   },
   "dependencies": {
     "@google/generative-ai": "^0.24.1",
+    "@heroicons/react": "^2.2.0",
     "@supabase/ssr": "^0.6.1",
     "@types/pdfjs-dist": "^2.10.378",
     "next": "15.3.2",
